// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout Renders with children 1`] = `
<div>
  <div
    class="layout"
  >
    <span>
      Child element
    </span>
  </div>
</div>
`;

exports[`Layout Renders without children 1`] = `
<div>
  <div
    class="layout"
  />
</div>
`;
